fix: nested collapse conflict

--- a/src/styles/objects/_molecule.collapse.scss
+++ b/src/styles/objects/_molecule.collapse.scss
@@ -7,7 +7,7 @@
     max-height: 0;
   }
 
-  &--open &__content {
+  &--open > &__content {
     width: 100%;
     max-height: 100vh;
   }
